# paper-summary

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
slides/: test_paper_slide.pptx
src/: __init__.py  __main__.py  cli.py  config.py
src/api/: __init__.py  arxiv.py  papers_cool.py
src/browser/: __init__.py  arxiv.py  base.py  manager.py  papers_cool.py
src/crawler/: __init__.py  pdf.py
src/exporter/: __init__.py  pptx.py
src/llm/: __init__.py  client.py  prompt.py
src/processor/: __init__.py  data_collector.py  summary_gen.py
templates/: academic_summary.md.j2  academic_summary_phase1.md.j2  academic_summary_phase2.md.j2  lightweight_summary.md.j2  ppt_slide.md.j2  structured_analysis.md.j2  structured_analysis_phase1.md.j2  structured_analysis_phase2.md.j2
